--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 		<meta property="og:title" content="Leandro Espinosa Arcentales 2º ASIR">
 		<meta property="og:description" content="Porfolio Leandro">
 		<meta property="og:image" content="">
+		<meta property="og:type" content="website">
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 			integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
+			
 		/>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -20,13 +23,13 @@
 			crossorigin="anonymous"
 		/>
 		<title>Leandro</title>
+		
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<picture>
-			<source media="(min-width: 800px)" srcset="foto-grande.jpg">
-			<source media="(min-width: 400px)" srcset="foto-mediana.jpg">
-			<img src="/images/foto1.JPG" alt="">
-		</picture>
+		<div class="container text-center mt-4">  <img src="/Pagina/images/perfil.JPG" alt="Foto de perfil" class="profile-image"> 
+		</div>
+
 		<!-- Nav -->
 		<nav class="navbar navbar-expand-lg py-4">
 			<div class="container" id="inicio">
@@ -34,8 +37,8 @@
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav mx-auto">
+				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a href="#Sobre Mi" class="nav-link">Sobre mí</a>
 						</li>
@@ -46,78 +49,32 @@
 							<a href="#contacto" class="nav-link">Contacto</a>
 						</li>
 					</ul>
-					<form action="" class="d-flex">
-						<input type="search" class="form-control me-2" placeholder="Search" />
-						<button class="btn btn-success" type="submit">Search</button>
-					</form>
 				</div>
 			</div>
 		</nav>
 
 		<!-- Showcase -->
 		<div class="showcase container mt-5" id="Sobre Mi">
-			<div class="row">
-				<div class="col-md-6 d-flex flex-column justify-content-center pb-3">
-					<h1 class="display-4 mb-3 fw-3">
-						<span class="text-success">Sobre mí</span> <br />
-					</h1>
-					<p class="lead text-muted">
+				<div class="row">
+					<div class="col-md-6 d-flex flex-column justify-content-center pb-3">
+						<div class="col-md-6">
+						</div>
+						<h1 class="display-4 mb-3 fw-3">
+							<span class="text-success">Sobre mí</span> <br />
+						</h1>
+						<p class="lead text-muted">
 						Soy un estudiante apasionado de la informática cursando el Grado Superior de ASIR (Administración de Sistemas Informáticos en Red). 
 						Mi formación me ha proporcionado una base sólida en hardware y software, 
 						aprendiendo desde el montaje y mantenimiento de equipos hasta la gestión de sistemas operativos y redes. 
 						Soy una persona proactiva y responsable, con ganas aprender y mantenerme al día con las últimas tendencias tecnológicas.
 						En el futuro, me planteo el aprendizaje en programación para complementar mi perfil técnico y mis oportunidades profesionales.
-					</p>
-				</div>
-				<div class="col-md-6 pb-5 d-none d-md-block">
-					<img src="/images/showcase.jpg" class="img-fluid rounded-start-pill" alt="" />
+						</p>
+					</div>
+					<div class="col-md-6 pb-5 d-none d-md-block">
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<!-- Services -->
-		<section class="services py-5">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="card border-0">
-							<div class="card-body">
-								<i class="fas fa-user fa-2x my-3 text-success opacity-50"></i>
-								<h5 class="fw-light pb-2">Built your developers</h5>
-								<p class="text-muted">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolore voluptate dolorum officia, optio
-									numquam expedita!
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card border-0">
-							<div class="card-body">
-								<i class="fas fa-display fa-2x my-3 text-success opacity-50"></i>
-								<h5 class="fw-light pb-2">Designed to be modern</h5>
-								<p class="text-muted">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolore voluptate dolorum officia, optio
-									numquam expedita!
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card border-0">
-							<div class="card-body">
-								<i class="fas fa-code fa-2x my-3 text-success opacity-50"></i>
-								<h5 class="fw-light pb-2">Documentation for everything</h5>
-								<p class="text-muted">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolore voluptate dolorum officia, optio
-									numquam expedita!
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
 
 		<!-- Proyectos -->
 		<section class="projects py-5 bg-light" id="proyectos">  
@@ -128,34 +85,63 @@
             </h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card mb-4">  <img src="/images/proyecto1.png" class="card-img-top" alt="Proyecto 1">
+                    <div class="card mb-4">  
+						<img src="/Pagina/images/proyecto1.png" class="card-img-top project-image" alt="Proyecto 1">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 1</h5>
-                            <p class="card-text">Breve descripción del proyecto 1.  Puedes incluir detalles técnicos o el propósito del proyecto.</p>
-                            <a href="#" class="btn btn-success">Ver Detalles</a>  </div>
+                            <p class="card-text">Proyecto Lista de tareas mediante el uso de bootstrap y JavaScript</p>
+						</div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card mb-4">  <img src="/images/project2.jpg" class="card-img-top" alt="Project 2">
+                    <div class="card mb-4">  <img src="/Pagina/images/proyecto2.png" class="card-img-top" alt="Proyecto 2">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 2</h5>
-                            <p class="card-text">Breve descripción del proyecto 2.  Puedes incluir detalles técnicos o el propósito del proyecto.</p>
-                            <a href="#" class="btn btn-success">Ver Detalles</a>  </div>
+                            <p class="card-text">Creación de una One Page Portafolio Web</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card mb-4">  <img src="/images/project3.jpg" class="card-img-top" alt="Project 3">
+                    <div class="card mb-4">  <img src="/Pagina/images/proyecto3.png" class="card-img-top" alt="Proyecto 3">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 3</h5>
-                            <p class="card-text">Breve descripción del proyecto 3.  Puedes incluir detalles técnicos o el propósito del proyecto.</p>
-                            <a href="#" class="btn btn-success">Ver Detalles</a>  </div>
+                            <p class="card-text">Creación y configuración de un perfil profesional en GitHub</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    	</section>
+		<section class="skills py-5 bg-light">
+			<div class="container">
+			<h2 class="text-center fw-light pt-5 pb-3">
+				Mis Habilidades <br />
+				<span class="text-success">y Conocimientos</span>
+			</h2>
+			<div class="skills-container">
+				<div class="skill">
+					<h3>HTML</h3>
+					<div class="progress-bar">
+						<div class="progress" data-progress="80"></div>
+					</div>
+				</div>
+				<div class="skill">
+					<h3>CSS</h3>
+					<div class="progress-bar">
+						<div class="progress" data-progress="80"></div>
+					</div>
+				</div>
+				<div class="skill">
+					<h3>JavaScript</h3>
+					<div class="progress-bar">
+						<div class="progress" data-progress="60"></div>
+					</div>
+				</div>
+			</div>
+			</div>
+		</section>
 
-		<!-- Contact -->
+		<!-- Contacto -->
 		<section class="contact py-5 bg-light">
 			<div id="contacto" class="container" >
 				<div class="row">
