Actualización de la página de inicio

--- a/index.html
+++ b/index.html
@@ -27,16 +27,13 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<div class="container text-center mt-4">  <img src="/Pagina/images/perfil.JPG" alt="Foto de perfil" class="profile-image"> 
+		<div class="container text-center mt-4">  <img src="images/perfil.JPG" alt="Foto de perfil" class="profile-image"> 
 		</div>
 
 		<!-- Nav -->
 		<nav class="navbar navbar-expand-lg py-4">
 			<div class="container" id="inicio">
-				<a href="#" class="navbar-brand">Leandro Espinosa</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-					<span class="navbar-toggler-icon"></span>
-				</button>
+				<a href="#inicio" class="navbar-brand">Leandro Espinosa</a>
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
@@ -53,11 +50,12 @@
 			</div>
 		</nav>
 
-		<!-- Showcase -->
+		<!-- Sobre mi -->
 		<div class="showcase container mt-5" id="Sobre Mi">
 				<div class="row">
 					<div class="col-md-6 d-flex flex-column justify-content-center pb-3">
 						<div class="col-md-6">
+
 						</div>
 						<h1 class="display-4 mb-3 fw-3">
 							<span class="text-success">Sobre mí</span> <br />
@@ -71,6 +69,7 @@
 						</p>
 					</div>
 					<div class="col-md-6 pb-5 d-none d-md-block">
+
 					</div>
 				</div>
 			</div>
@@ -86,7 +85,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">  
-						<img src="/Pagina/images/proyecto1.png" class="card-img-top project-image" alt="Proyecto 1">
+						<img src="images/proyecto1.png" class="card-img-top project-image" alt="Proyecto 1">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 1</h5>
                             <p class="card-text">Proyecto Lista de tareas mediante el uso de bootstrap y JavaScript</p>
@@ -94,7 +93,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card mb-4">  <img src="/Pagina/images/proyecto2.png" class="card-img-top" alt="Proyecto 2">
+                    <div class="card mb-4">  <img src="images/proyecto2.png" class="card-img-top" alt="Proyecto 2">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 2</h5>
                             <p class="card-text">Creación de una One Page Portafolio Web</p>
@@ -102,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card mb-4">  <img src="/Pagina/images/proyecto3.png" class="card-img-top" alt="Proyecto 3">
+                    <div class="card mb-4">  <img src="images/proyecto3.png" class="card-img-top" alt="Proyecto 3">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 3</h5>
                             <p class="card-text">Creación y configuración de un perfil profesional en GitHub</p>
